# numb3rs

./: .gitignore  CMakeLists.txt  README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pterabytegames/apps/numb3rs/: Numb3rsActivity.java
android/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
cmake/native_app_glue/: CMakeLists.txt
source/: main.cpp
